--- a/feed/templates/feed/homepage.html
+++ b/feed/templates/feed/homepage.html
@@ -2,8 +2,10 @@
 
  {% block title %} Home Pag {% endblock %} 
  {% block body %}
+ <div id="posts-container">
  {% for post in posts %}
     {% include "includes/post.html" with post=post show_detail_link=True%}
 
 {% endfor %}
+</div>
 {% endblock %}
