--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
     <!-- component is from https://tailwindcomponents.com/component/sidebar-navigation-->
 
     <div class="min-h-screen flex flex-row bg-gray-100">
@@ -37,7 +38,7 @@
           <li>
             <a
               href="{% url 'feed:new_post' %}"
-              class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800"
+              class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800 js-toggle-modal"
             >
               <span
                 class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"
@@ -78,52 +79,64 @@
       <div class="p-16">
         {% block body %} {% block content %} {% endblock %} {% endblock %}
       </div>
-{% if not request.user.is_anonymous %}
+      {% if not request.user.is_anonymous %}
       <!-- component -->
-        <div
-          class="flex items-center justify-center fixed left-0 bottom-0 w-full h-full bg-gray-800 bg-opacity-75 hidden js-modal"
-        >
-          <div class="bg-white rounded-lg w-1/2">
-            <div class="flex flex-col items-start p-4">
-              <div class="flex items-center w-full">
-                <div class="text-gray-900 font-medium text-lg">New Post</div>
+      <div
+        class="flex items-center justify-center fixed left-0 bottom-0 w-full h-full bg-gray-800 bg-opacity-75 hidden js-modal"
+      >
+        <div class="bg-white rounded-lg w-1/2">
+          <div class="flex flex-col items-start p-4">
+            <div class="flex items-center w-full">
+              <div class="text-gray-900 font-medium text-lg">New Post</div>
+              <svg
+                class="ml-auto fill-current text-gray-700 w-6 h-6 cursor-pointer js-toggle-modal"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 18 18"
+              >
+                <path
+                  d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
+                />
+              </svg>
+            </div>
+            <hr />
+            <div class="w-full">
+              <textarea
+                class="border-2 border-blue-500 my-4 w-full js-post-text"
+                placeholder="Enter your post"
+                rows="3" maxlength="240" data-post-url="{% url 'feed:new_post' %}"
+              ></textarea>
+            </div>
+            <hr />
+            <div class="ml-auto">
+              <button
+                class="bg-white text-gray-800 font-bold rounded border-b-2 border-green-500 hover:border-green-600 hover:bg-green-500 hover:text-white shadow-md py-1 px-3 inline-flex items-center text-sm mt-4 js-submit"
+                type="button"
+              >
+                <span class="mr-2">Create Post</span>
                 <svg
-                  class="ml-auto fill-current text-gray-700 w-6 h-6 cursor-pointer"
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 18 18"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                 >
                   <path
-                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
-                  />
+                    fill="currentcolor"
+                    d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
+                  ></path>
                 </svg>
-              </div>
-              <hr />
-              <div class=""></div>
-              <hr />
-              <div class="ml-auto">
-                <button
-                  class="bg-white text-gray-800 font-bold rounded border-b-2 border-green-500 hover:border-green-600 hover:bg-green-500 hover:text-white shadow-md py-1 px-3 inline-flex items-center text-sm mt-4 js-submit"
-                  type="button"
-                >
-                  <span class="mr-2">Create Post</span>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      fill="currentcolor"
-                      d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
-                    ></path>
-                  </svg>
-                </button>
-              </div>
+              </button>
             </div>
           </div>
         </div>
+      </div>
       {% endif %}
     </div>
-  <script src="{%static 'js/main.js' %}"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="{%static 'js/main.js' %}"></script>
   </body>
 </html>
